# vortex

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Justfile  LICENSE  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  competitive-bench.yml  fuzz-nightly.yml  release.yml
crates/vortex-acl/: Cargo.toml
crates/vortex-acl/src/: lib.rs
crates/vortex-cluster/: Cargo.toml
crates/vortex-cluster/src/: lib.rs
crates/vortex-common/: Cargo.toml
crates/vortex-common/src/: constants.rs  encoding.rs  error.rs  key.rs  lib.rs  shard.rs  timestamp.rs  ttl.rs  value.rs
crates/vortex-config/: Cargo.toml
crates/vortex-config/src/: lib.rs
crates/vortex-engine/: Cargo.toml
crates/vortex-engine/benches/: engine.rs  table.rs
crates/vortex-engine/docs/: 01-architecture-overview.md  02-concurrent-keyspace.md  03-swiss-table-layout.md  04-command-execution.md  05-integration-and-transactions.md
crates/vortex-engine/src/: command.rs  concurrent_keyspace.rs  entry.rs  eviction.rs  expiry.rs  keyspace.rs  lib.rs  morph.rs  prefetch.rs  shard.rs  table.rs
crates/vortex-engine/src/commands/: connection.rs  context.rs  generic.rs  key.rs  mod.rs  pattern.rs  server.rs  string.rs  transaction.rs
crates/vortex-io/: Cargo.toml
crates/vortex-io/src/: accept.rs  backend.rs  connection.rs  lib.rs  pool.rs  reactor.rs  shutdown.rs  timer.rs
crates/vortex-io/src/backend/: mod.rs  polling.rs  uring.rs
crates/vortex-io/tests/: engine_integration.rs  multi_reactor.rs  ping_pong.rs  shutdown.rs  shutdown_timeout.rs
crates/vortex-memory/: Cargo.toml
crates/vortex-memory/src/: allocator.rs  arena.rs  buffer_pool.rs  lib.rs  numa.rs
crates/vortex-metrics/: Cargo.toml
crates/vortex-metrics/src/: lib.rs
crates/vortex-persist/: Cargo.toml
crates/vortex-persist/src/: lib.rs
crates/vortex-persist/src/aof/: format.rs  mod.rs  reader.rs  rewrite.rs  writer.rs
crates/vortex-proto/: Cargo.toml  build.rs
crates/vortex-proto/src/: command.rs  frame.rs  iovec.rs  lib.rs  parser.rs  scanner.rs  serializer.rs  swar.rs  tape.rs
crates/vortex-pubsub/: Cargo.toml
crates/vortex-pubsub/src/: lib.rs
crates/vortex-replication/: Cargo.toml
crates/vortex-replication/src/: lib.rs
crates/vortex-scripting/: Cargo.toml
crates/vortex-scripting/src/: lib.rs
crates/vortex-server/: Cargo.toml
crates/vortex-server/src/: main.rs
crates/vortex-sync/: Cargo.toml
crates/vortex-sync/src/: backoff.rs  counter.rs  lib.rs  mpsc.rs  signal.rs  spsc.rs
dev/bench/: data.js
docs/: architecture.md  benchmarks.md  compatibility.md  configuration.md  migration.md  performance-tooling-guide.md
fuzz/: Cargo.toml  generate_corpus.py
fuzz/corpus/fuzz_resp_parser/: array_incomplete  array_nested  array_set  bulk_huge_len  bulk_string_large  error_wrongtype  integer_neg  missing_crlf  pipeline_2  simple_string_long
fuzz/fuzz_targets/: fuzz_rdb_import.rs  fuzz_resp_parser.rs  fuzz_simd_scanner.rs  fuzz_swar_integer.rs
scripts/: bench-commands.sh  compare.sh  flamegraph.sh  profiler.sh  validate-benchmarks.sh
scripts/profiler/: bench.sh  build.sh  cache.sh  check.sh  common.sh  cpu.sh  criterion.sh  host.sh  host_telemetry_runner.py  memory.sh  parse_manifest.py  prepare_benchmark_bridge.py  server.sh  summary.sh  write_session_summary.py
scripts/profiler/docs/: profiling-workflow.md
scripts/profiler/manifests/: aof-disk-write-pressure.yaml  cpu-set-heavy.yaml  full-suite.yaml  memory-write-pressure.yaml  network-mixed.yaml  scheduler-read-heavy.yaml
smoketests/: Cargo.toml  README.md
smoketests/scripts/: run-existing.sh  run-local.sh
smoketests/src/: context.rs  lib.rs  main.rs  runner.rs  server.rs  spec.rs
smoketests/src/commands/: append.rs  command.rs  copy.rs  dbsize.rs  decr.rs  decrby.rs  del.rs  discard.rs  echo.rs  exec.rs  exists.rs  expire.rs  expireat.rs  expiretime.rs  flushall.rs  flushdb.rs  get.rs  getdel.rs  getex.rs  getrange.rs  getset.rs  incr.rs  incrby.rs  incrbyfloat.rs  info.rs  keys.rs  mget.rs  mod.rs  mset.rs  msetnx.rs  multi.rs  persist.rs  pexpire.rs  pexpireat.rs  pexpiretime.rs  ping.rs  psetex.rs  pttl.rs  quit.rs  randomkey.rs  (+16 more)
smoketests/tests/: server_startup.rs
tools/vortex-bench/: Cargo.toml
tools/vortex-bench/benches/: engine.rs  parser.rs  reactor_clock.rs  reactor_scaling.rs  ring_buffer.rs  transaction_roundtrip.rs
tools/vortex-bench/src/: latency.rs  lib.rs  perf_counters.rs
tools/vortex-cli/: Cargo.toml
tools/vortex-cli/src/: main.rs
vortex-benchmark/: README.md
vortex-benchmark/docs/: extending.md  manifests-and-workloads.md  profiling-workflow.md  reporting-and-ci.md  support-matrix.md  usage.md
vortex-benchmark/manifests/examples/: aof-everysec-native.yaml  ci-regression-native.yaml  eviction-allkeys-lru-native.yaml  local-native-custom-rust.yaml  local-native-full-cycle.yaml  local-native-memtier.yaml  local-native-redis-benchmark-polling.yaml  local-native-redis-benchmark-repeat.yaml  local-native-redis-benchmark-uring.yaml  local-native-redis-benchmark.yaml  mixed-container.json  read-heavy-native.yaml  zipfian-mixed-lfu.yaml
vortex-benchmark/python/: pyproject.toml
vortex-benchmark/python/vortex_benchmark/: catalog.py  cli.py  models.py  telemetry.py
vortex-benchmark/python/vortex_benchmark/backends/: __init__.py  base.py  custom_rust.py  memtier.py  redis_benchmark.py
vortex-benchmark/python/vortex_benchmark/commands/: __init__.py  attach.py  report.py  run.py  setup.py  teardown.py
vortex-benchmark/python/vortex_benchmark/db/: __init__.py  base.py  dragonfly.py  redis.py  registry.py  valkey.py  vortex.py
vortex-benchmark/python/vortex_benchmark/env/: __init__.py  layout.py  readiness.py  state.py
vortex-benchmark/python/vortex_benchmark/manifests/: __init__.py  loader.py  resolver.py
vortex-benchmark/python/vortex_benchmark/reporting/: __init__.py  analysis.py  charts.py  collector.py  markdown.py  publication.py
vortex-benchmark/rust/custom-loadgen/: Cargo.toml
(+1 files in other folders)
