[package]
name = "vortex-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB configuration parsing (CLI, TOML, environment variables)"

[dependencies]
vortex-common = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
