[package]
name = "vortex-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB core data engine — Swiss Table, shard, commands, data structures"

[features]
default = ["simd"]
simd = []

[lints.rust]
unsafe_code = "allow"

[dependencies]
vortex-common = { workspace = true }
vortex-proto = { workspace = true }
vortex-memory = { workspace = true }
ahash = { workspace = true }
crossbeam-utils = { workspace = true }
parking_lot = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
