[package]
name = "vortex-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB persistence engine — AOF, VXF snapshots, shadow paging"

[features]
default = []
dax = []
io-uring = ["dep:io-uring"]

[dependencies]
vortex-common = { workspace = true }
vortex-memory = { workspace = true }
vortex-engine = { workspace = true }
vortex-proto = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
itoa = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
