[package]
name = "vortex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB server binary"

[[bin]]
name = "vortex-server"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[dependencies]
vortex-common = { workspace = true }
vortex-memory = { workspace = true }
vortex-config = { workspace = true }
vortex-io = { workspace = true, features = ["io-uring"] }
vortex-persist = { workspace = true }
vortex-engine = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
