[package]
name = "vortex-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB benchmarks"

[dependencies]
vortex-common = { workspace = true }
vortex-engine = { workspace = true }
vortex-proto = { workspace = true }
vortex-sync = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "parser"
harness = false
