[package]
name = "vortex-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VortexDB benchmarks"

[dependencies]
vortex-common = { workspace = true }
vortex-engine = { workspace = true }
vortex-io = { workspace = true }
core_affinity = { workspace = true }
vortex-proto = { workspace = true }
vortex-sync = { workspace = true }
hdrhistogram = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hdrhistogram = { workspace = true }

[lib]
bench = false

[[bin]]
name = "vortex-loadgen"
path = "src/bin/loadgen.rs"
bench = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "reactor_scaling"
harness = false
